--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "react-native-webview": "13.12.5",
+    "expo-camera": "~16.0.18",
+    "expo-location": "~18.0.10",
+    "expo-media-library": "~17.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
