--- a/app.json
+++ b/app.json
@@ -1,28 +1,37 @@
 {
   "expo": {
-    "name": "magicStoryGenerator",
-    "slug": "magicStoryGenerator",
+    "name": "WebViewApp",
+    "slug": "WebViewApp",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
+    "platforms": ["ios", "android"],
+    "plugins": [
+      "expo-camera",
+      "expo-location",
+      "expo-media-library"
+    ],
     "ios": {
-      "supportsTablet": true
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app needs your location for better service.",
+        "NSCameraUsageDescription": "This app needs camera access for photos.",
+        "NSMicrophoneUsageDescription": "This app needs microphone access for video recording.",
+        "NSPhotoLibraryUsageDescription": "This app needs photo library access for media uploads.",
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true
+        }
+      },
+      "bundleIdentifier": "com.yourcompany.webviewapp"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "permissions": [
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.READ_MEDIA_IMAGES",
+        "android.permission.READ_MEDIA_VIDEO"
+      ],
+      "package": "com.yourcompany.webviewapp"
     }
   }
 }
