--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-webview": "13.12.5",
-    "expo-camera": "~16.0.18",
+    "expo-camera": "14.0.0",
     "expo-location": "~18.0.10",
     "expo-media-library": "~17.0.6"
   },
