--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "WebViewApp",
-    "slug": "WebViewApp",
+    "name": "magicStoryGenerator",
+    "slug": "magicStoryGenerator",
     "version": "1.0.0",
     "platforms": ["ios", "android"],
     "plugins": [
@@ -19,7 +19,7 @@
           "NSAllowsArbitraryLoads": true
         }
       },
-      "bundleIdentifier": "com.yourcompany.webviewapp"
+      "bundleIdentifier": "com.yourcompany.magicStoryGenerator"
     },
     "android": {
       "permissions": [
@@ -31,7 +31,7 @@
         "android.permission.READ_MEDIA_IMAGES",
         "android.permission.READ_MEDIA_VIDEO"
       ],
-      "package": "com.yourcompany.webviewapp"
+      "package": "com.yourcompany.magicStoryGenerator"
     }
   }
 }
