--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-native-webview": "13.12.5",
     "expo-camera": "14.0.0",
     "expo-location": "~18.0.10",
-    "expo-media-library": "~17.0.6"
+    "expo-media-library": "~17.0.6",
+    "expo-auth-session": "~6.0.3",
+    "expo-web-browser": "~14.0.2",
+    "expo-linking": "~7.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
